--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  go_router: ^14.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
