--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   go_router: ^14.2.0
   path: ^1.9.0
+  path_provider: ^2.1.3
   sqflite: ^2.3.3+1
 
 dev_dependencies:
